# mcp-options-order-flow-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: mcp_server.py
src/formatters/: xml_formatter.py
src/storage/: grpc_client.py
src/tools/: options_flow_tool.py
